header alignment fixed

--- a/app/src/assets/styles/style.scss
+++ b/app/src/assets/styles/style.scss
@@ -467,6 +467,9 @@ li {
     }
 
     #appearance-section{
+      p{
+        margin-top: 0;
+      }
       .appearance-selection{
         margin-left: -35px;
         margin-top: -10px;
